// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders correctly with no data 1`] = `
<InfiniteScroll
  element="div"
  getScrollParent={null}
  hasMore={true}
  initialLoad={true}
  isReverse={false}
  loadMore={[Function]}
  loader={
    <div
      className="loader"
    >
      Loading ...
    </div>
  }
  pageStart={0}
  ref={null}
  threshold={0}
  useCapture={false}
  useWindow={true}
>
  <_temp
    advisors={Array []}
  />
</InfiniteScroll>
`;

exports[`Table renders correctly with valid data 1`] = `
<InfiniteScroll
  element="div"
  getScrollParent={null}
  hasMore={true}
  initialLoad={true}
  isReverse={false}
  loadMore={[Function]}
  loader={
    <div
      className="loader"
    >
      Loading ...
    </div>
  }
  pageStart={0}
  ref={null}
  threshold={0}
  useCapture={false}
  useWindow={true}
>
  <_temp
    advisors={
      Array [
        Object {
          "fname": "John",
          "language": "es",
          "lname": "Doe",
          "reviews": 100,
          "status": "online",
        },
      ]
    }
  />
</InfiniteScroll>
`;
